--- a/tfdv-dataflow.ipynb
+++ b/tfdv-dataflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bound-estimate",
+   "id": "vanilla-question",
    "metadata": {},
    "source": [
     "# TensorFlow Data Validation (TFDV): Scaling with Apache Beam\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-physiology",
+   "id": "crude-cherry",
    "metadata": {},
    "source": [
     "### Install dependencies"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "broadband-musician",
+   "id": "awful-characteristic",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "human-motorcycle",
+   "id": "greek-insulin",
    "metadata": {},
    "source": [
     "### Dataset\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formed-judgment",
+   "id": "brown-cause",
    "metadata": {},
    "source": [
     "### Imports"
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "identical-placement",
+   "execution_count": 90,
+   "id": "existing-steel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +173,14 @@
     "GCS_BUCKET = \"freeldom-mlops-deployments\" # Set your GCS bucket\n",
     "PROJECT_ID = 'freeldom' # Set your GCP Project Id\n",
     "REGION = 'asia-southeast1' # Set the region for Dataflow jobs\n",
-    "\n",
+    "LOCAL = False\n",
     "\n",
     "CHICAGO_CRIME_TABLE = 'bigquery-public-data.chicago_crime.crime'\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "found-shade",
+   "id": "latin-puppy",
    "metadata": {},
    "source": [
     "## Extract data from BigQuery"
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "norwegian-summer",
+   "id": "early-tragedy",
    "metadata": {},
    "source": [
     "Instead of extracting data from 2019 (260,673 records) to generate the schema, let's extract data between 2015 and 2019 (1,331,957 records). We will use the same SQL query to extract the data. However, this time we will use DataFlow. We will convert the records into TFRecord format as Tensorflow usually performs better on this type of file, but you could also use CSV if you want to."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "smoking-being",
+   "id": "limiting-wales",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-worth",
+   "id": "dying-prize",
    "metadata": {},
    "source": [
     "### Dataflow Pipeline\n",
@@ -241,8 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "illegal-bruce",
+   "execution_count": 95,
+   "id": "happy-restaurant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-finance",
+   "id": "cardiovascular-copying",
    "metadata": {},
    "source": [
     "Now, let's define our DataFlow pipeline. We have 4 steps as below:"
@@ -284,8 +284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "atmospheric-entrepreneur",
+   "execution_count": 96,
+   "id": "floral-jacket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-soundtrack",
+   "id": "contained-virginia",
    "metadata": {},
    "source": [
     "Once done, we can start triggering the job. Make sure your API for DataFlow has been enabled. \n",
@@ -313,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "herbal-japanese",
+   "execution_count": 97,
+   "id": "falling-baltimore",
    "metadata": {},
    "outputs": [
     {
@@ -340,27 +340,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "parallel-crossing",
+   "execution_count": 101,
+   "id": "sweet-norway",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_time = datetime.now().strftime('%y%m%d%H%M%S')\n",
+    "job_time = datetime.now().strftime('%Y%m%d-%H%M%S')\n",
     "root_folder = f\"gs://{GCS_BUCKET}/tfdv/{job_name}\" if not LOCAL else '.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "military-pursuit",
+   "execution_count": 102,
+   "id": "opening-cooper",
    "metadata": {},
    "outputs": [],
    "source": [
     "runner = \"DataflowRunner\" if not LOCAL else \"DirectRunner\"\n",
     "job_name = f\"tfdv-chicago-crime-{job_time}\"\n",
-    "year_from =  2015\n",
+    "year_from =  2019\n",
     "year_to = 2019\n",
-    "data_folder = root+\"/data/\"\n",
+    "data_folder = root+\"/data/train/\"\n",
     "query = generate_query(year_from, year_to, limit=None if not LOCAL else 10000)\n",
     "args = {\n",
     "    'job_name': job_name,\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "average-laser",
+   "id": "guilty-enhancement",
    "metadata": {},
    "source": [
     "Let's trigger the job. It may take about 15min with 1 worker."
@@ -384,8 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "western-vessel",
+   "execution_count": 103,
+   "id": "thrown-parcel",
    "metadata": {},
    "outputs": [
     {
@@ -403,8 +403,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "accomplished-scanning",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/'"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_folder"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "material-frontier",
+   "id": "strategic-quarterly",
    "metadata": {},
    "source": [
     "Confirm the data has been correctly extracted."
@@ -412,20 +433,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "canadian-vegetation",
+   "execution_count": 104,
+   "id": "sealed-representative",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00000-of-00006.tfrecords\n",
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00001-of-00006.tfrecords\n",
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00002-of-00006.tfrecords\n",
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00003-of-00006.tfrecords\n",
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00004-of-00006.tfrecords\n",
-      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/-00005-of-00006.tfrecords\n"
+      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/-00000-of-00002.tfrecords\n",
+      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/-00000-of-00003.tfrecords\n",
+      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/-00001-of-00002.tfrecords\n",
+      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/-00001-of-00003.tfrecords\n",
+      "gs://freeldom-mlops-deployments/tfdv/tfdv-chicago-crime-210526192954/data/train/-00002-of-00003.tfrecords\n"
      ]
     }
    ],
@@ -435,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graphic-brisbane",
+   "id": "basic-privilege",
    "metadata": {},
    "source": [
     "## Generating statistics"
@@ -443,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complete-lesbian",
+   "id": "brazilian-legend",
    "metadata": {},
    "source": [
     "The next step is to generate the statistics. We also have to use DataFlow for this step. We specify a sample rate to compute the statistics over the sample."
@@ -452,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "finite-slave",
+   "id": "urban-color",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empty-verification",
+   "id": "reserved-shanghai",
    "metadata": {},
    "source": [
     "Confirm the statistics have been correctly computed."
@@ -518,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "charged-vessel",
+   "id": "latin-comparative",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reported-segment",
+   "id": "instant-brooklyn",
    "metadata": {},
    "source": [
     "## Load statistics"
@@ -543,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "willing-collector",
+   "id": "oriental-customer",
    "metadata": {},
    "source": [
     "From there, the remaining steps are the same as the previous notebook. We can read the statistics directly from GCS and visualize them."
@@ -552,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "advance-memphis",
+   "id": "limiting-basics",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-deputy",
+   "id": "fewer-administration",
    "metadata": {},
    "source": [
     "## Infer schema"
@@ -592,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-rough",
+   "id": "wanted-fundamental",
    "metadata": {},
    "source": [
     "Let's infer the schema now. Remember that you should always review the schema before using it."
@@ -601,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "likely-somewhere",
+   "id": "distributed-forty",
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liked-indian",
+   "id": "minute-award",
    "metadata": {},
    "source": [
     "## End of lab\n",
@@ -835,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vocal-retro",
+   "id": "selective-typing",
    "metadata": {},
    "outputs": [],
    "source": []
